--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script 
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" 
+        crossorigin="anonymous"
+        src="js/jquery-3.2.1.min.js">
+    </script>
+    <link 
+        rel="stylesheet" 
+        src="css/bootstrap.min.css"  
+        integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
+        crossorigin="anonymous"></link>
     <title>PWA</title>
 </head>
 <body>
+    <button type="button" class="btn btn-primary">Primary</button>
     <h1>Hello World!</h1>
 </body>
 </html>
