--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <script src="script.js"></script>
     <title>PWA</title>
 </head>
 
@@ -31,12 +32,17 @@
                 
                 <div class="col-sm">
                     <label for="n1" style="color:white">Resultado</label>
-                    <input type="number" id="n2" disabled>
+                    <input type="number" id="n3" disabled>
                 </div>
             </div>
         </div>
         <div>
-            <button type="button" class="btn btn-dark">Calcular</button>
+            <button 
+                onclick="calc()"    
+                type="button" 
+                class="btn btn-dark">
+                    Calcular
+            </button>
         </div>        
         <br>
     </main>
