--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <script src="script.js"></script>
+    <link rel="manifest" href="manifest.json" />
+    <link rel="shortcut icon" href="icon.png" type="image/x-png" />
     <title>PWA</title>
 </head>
 
