--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
     <title>PWA</title>
 </head>
 
+<script>
+    if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function () {
+            navigator.serviceWorker
+                .register("serviceWorker.js")
+                .then(res => console.log("service worker registered"))
+                .catch(err => console.log("service worker not registered", err))
+        })
+    }
+</script>
+
 <body>
     <main class="container" style="background-color: #555;">
         <h1 style="text-align: center; color: white">Calculadora</h1>
@@ -31,7 +42,7 @@
                     <label for="n1" style="color:white">Número 2:</label>
                     <input type="number" id="n2">
                 </div>
-                
+
                 <div class="col-sm">
                     <label for="n1" style="color:white">Resultado</label>
                     <input type="number" id="n3" disabled>
@@ -39,13 +50,10 @@
             </div>
         </div>
         <div>
-            <button 
-                onclick="calc()"    
-                type="button" 
-                class="btn btn-dark">
-                    Calcular
+            <button onclick="calc()" type="button" class="btn btn-dark">
+                Calcular
             </button>
-        </div>        
+        </div>
         <br>
     </main>
 </body>
